<resources>
    <string name="app_name">GBSBadrSF</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_pass">please enter password</string>
    <string name="signin_text">Sign in</string>
    <string name="enter_usrname">please enter username</string>
    <string name="main_schedule_list">Main Schedule List</string>
    <string name="job_order_number">Job order number</string>
    <string name="sequence">Sequence</string>
    <string name="machine_loading">Machine Loading</string>
    <string name="child_card">Child card</string>
    <string name="job_order_number_txt">Job order Name :</string>
    <string name="child_code">Child Code : </string>
    <string name="job_orderqtn">Job order Qty :</string>
    <string name="machine_code">Machine Code</string>
    <string name="die_code">Die Code</string>
    <string name="loadingqtn">Loading Qty</string>
    <string name="child_qtn">Child Qty : </string>
    <string name="operation_txt">Operation : </string>
    <string name="save">Save</string>
    <string name="add_workers">Add workers</string>
    <string name="production_scrap"> Create Scrap request</string>
    <string name="basket_qtn">Basket Qty :</string>
    <string name="production_sign_off">Production Sign off</string>
    <string name="child">Child :  </string>
    <string name="basket_qtn_edt">Basket Qty</string>
    <string name="production_set_qtn">Production set Qtn</string>
    <string name="repair_orders">Repair Orders</string>
    <string name="number_of_defects">Number of Defects</string>
    <string name="basket_code">Basket Code</string>
    <string name="child_withoutspace">Child</string>
    <string name="operation">Operation</string>
    <string name="notes">Notes</string>
    <string name="scrap">Scrap</string>
    <string name="quantity_ok">Quantity ok</string>
    <string name="defect_qtns">Defect Qty :</string>
    <string name="job_order_name">Job Order Name :</string>
    <string name="scrap_qtn">Scrap Qty</string>
    <string name="job_order_name_txt">Job order Name</string>
    <string name="scrap_qtn_txt">Scrap Qty : </string>
    <string name="responsible_dep">Responsible Dep :</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="quality_scrap_approval">Quality Scrap approval</string>
    <string name="production_scrap_approval">Production Scrap approval</string>
    <string name="production_scrap_list"> Scrap request List</string>
    <string name="quality_scrap_list"> Scrap request List</string>
    <string name="add_defects">Add Defects</string>
    <string name="child_txt">Child : </string>
    <string name="dep">Dep : </string>
    <string name="stauts_code">Stauts Code</string>
    <string name="parent">Parent :  </string>
    <string name="loaing_quantites">Loaing Quantites :</string>
    <string name="sign_off">Sign off</string>
    <string name="station">Station Code</string>
    <string name="basket">Basket</string>
    <string name="quantity">Quantity</string>
    <string name="loading_qtn">Loading Qty</string>
    <string name="qc_decision">Qc Decision</string>
    <string name="defect_name">Defect Name</string>
    <string name="qc_notes">Qc Notes</string>
    <string name="production_notes">Production Notes</string>
    <string name="production_repair">Production repair</string>
    <string name="main_menu">Main Menu</string>
    <string name="quality">Quality</string>
    <string name="production">Production</string>
    <string name="planning">Planning</string>
    <string name="engineering">Engineering</string>
    <string name="production_menu">Production Menu</string>
    <string name="manfacturing">Manfacturing</string>
    <string name="welding">Welding</string>
    <string name="paint">Paint</string>
    <string name="welding_menu">Welding Menu</string>
    <string name="machine_sign_off">Machine Sign off</string>
    <string name="scrap_request">Scrap request</string>
    <string name="quality_scrap_request">Assigned Scrap request</string>
    <string name="basket_transfer">Basket Transfer</string>
    <string name="quality_welding">Welding Quality</string>
    <string name="add_defect">Add Defect</string>
    <string name="quality_repair">Quality repair</string>
    <string name="quality_desicion">Quality Desicion</string>
    <string name="production_scrap_request">Production Scrap request</string>
    <string name="paint_menu">Paint Menu</string>
    <string name="paint_quality">Paint Quality</string>
    <string name="manfacturing_menu">Manfacturing Menu</string>
    <string name="manfacturing_quality">Manfacturing Quality</string>
    <string name="add_downtime">Add Downtime</string>
    <string name="close_downtime">Close Downtime</string>
    <string name="plan_staus">Plan staus</string>
    <string name="basket_to">Basket to</string>
    <string name="defected_qty">Defected Qty :</string>
    <string name="code">Code</string>
    <string name="responsible_dep_txt">Responsible Dep</string>
    <string name="defect_list">Defect List</string>
    <string name="back">Back</string>
    <string name="quality_operation_name">Qc Name :</string>
    <string name="item_code">Item Code</string>
    <string name="inspection_machine_code">Inspection Machine code</string>
    <string name="qty">Qty</string>
    <string name="qty_txt">Qty :</string>
    <string name="parent_txt">Parent</string>
    <string name="parentcode_txt">MFGPF1132020A2W</string>
    <string name="parentdes_txt">Center Stand Assembly</string>
    <string name="childcode_txt">MFGPF1132021M2W</string>
    <string name="childdesc_txt">Main Pipe RH Machinery </string>
    <string name="station_loading">Station Loading</string>
    <string name="station_sign_off">Station sign off</string>
    <string name="operation_display">Welding 1</string>
    <string name="qc_gate1">Qc gate1</string>
    <string name="paint_station_loading">Paint Station loading</string>
    <string name="paint_sign_off">Paint Sign off</string>
    <string name="color_verification">Color verification</string>
    <string name="color_validation">Color validation</string>
    <string name="loading_qty">Loading Qty : </string>
    <string name="item_component">Item Component</string>
    <string name="paint_sequence">Paint Sequence</string>
    <string name="basket_qty">Basket Qty</string>
    <string name="qc_operation_1">Qc operation 1</string>
    <string name="sequence_num">Seq #</string>
    <string name="po_qty">Po Qty</string>
    <string name="status">Status</string>
    <string name="basket_code_txt">Basket Code :</string>
    <string name="sign_off_qty">Sign off Qty</string>
    <string name="defect_qty">Defect Qty</string>
    <string name="repaired_qty">repaired Qty</string>
    <string name="approved_qty">Approved Qty</string>
    <string name="sample_qty">Sample Qty</string>
    <string name="close">Close</string>
    <string name="defect_name_txt">Defect Name :</string>
    <string name="responsible">Responsible</string>
    <string name="create_scrap">Create Scrap</string>
    <string name="existing_defects">Existing Defects</string>
    <string name="new_defects">New Defects</string>
    <string name="display_defects">Display Defects</string>
    <string name="first_loading">First Loading</string>
    <string name="mchinesignoff">Mchine Signoff</string>
    <string name="machine_hold">Machine hold</string>
    <string name="signoff_items">Signoff Items</string>
    <string name="machine_wip">Machine WIP</string>
    <string name="new_request">New request</string>
    <string name="uservalidationerror">Please enter User name</string>
    <string name="passwordvalidationerror">please Enter password</string>
    <string name="quality_operation">Quality Operation</string>
    <string name="without_defect">Without Defect</string>
    <string name="defects_details">Defects Details</string>
    <string name="total_defected_qty">Total Defected Qty</string>
    <string name="add_defects_details">Add Defects Details</string>
    <string name="defects_select_list">Defects Select List</string>
    <string name="add">Add</string>
    <string name="add_repair">Add repair</string>
    <string name="repair_qty">Repair Qty</string>
    <string name="rejected_qtn_txt">Rejected Qty</string>
    <string name="rejection_request">Rejection Request</string>
    <string name="random_quality_inspection">Random Quality Inspection</string>
    <string name="job_order_qty">Job Order Qty</string>
    <string name="rejected_qty">Rejected Qty</string>
    <string name="create_rejection_request">Create Rejection Request</string>
    <string name="new_sample">New Sample</string>
    <string name="approved_quantity">Approved Quantity</string>
    <string name="check_list">Check List</string>


</resources>