<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Quality.manfacturing.ManufacturingAddDefects.ManufacturingAddDefectsFragment"
    >
    <TextView
        android:id="@+id/adddefect_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        style="@style/styleoftextinappbar"
        android:text="@string/add_defects"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adddefect_txt"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <TextView
                android:id="@+id/child_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Child : "
                style="@style/style_of_text_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="sans-serif"
                />
            <TextView
                android:id="@+id/child_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/childcode_txt"
                android:layout_marginStart="2dp"
                style="@style/styleoftext"
                app:layout_constraintStart_toEndOf="@id/child_txt"
                app:layout_constraintTop_toTopOf="@id/child_txt"
                android:layout_marginTop="2dp"
                />
            <TextView
                android:id="@+id/child_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/childdesc_txt"
                android:layout_marginTop="10dp"
                style="@style/styleoftext"
                app:layout_constraintStart_toStartOf="@id/child_code"
                app:layout_constraintTop_toBottomOf="@+id/child_code"
                />
            <TextView
                android:id="@+id/operation_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Operation : "
                style="@style/style_of_text_bold"
                app:layout_constraintStart_toStartOf="@id/child_txt"
                app:layout_constraintTop_toBottomOf="@id/child_desc"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"
                />

            <TextView
                android:id="@+id/operation"
                style="@style/styleoftext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/qc_operation_1"
                app:layout_constraintBottom_toBottomOf="@+id/operation_txt"
                app:layout_constraintStart_toEndOf="@id/operation_txt"
                app:layout_constraintTop_toTopOf="@id/operation_txt" />
            <TextView
                android:id="@+id/sampleqtn_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sample Qty"
                style="@style/style_of_text_bold"
                app:layout_constraintStart_toStartOf="@id/child_txt"
                app:layout_constraintTop_toBottomOf="@id/operation_txt"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif"
                />
            <TextView
                android:id="@+id/sample_qty_edt"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="2"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/sampleqtn_txt"
                app:layout_constraintTop_toBottomOf="@id/sampleqtn_txt"
                android:background="@drawable/edt_bg"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/defectqtn_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Defected Qty"
                style="@style/style_of_text_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/operation_txt"
                android:layout_marginTop="33dp"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="35dp"
                android:fontFamily="sans-serif"
                />
            <TextView
                android:id="@+id/defectqtn_edt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                app:layout_constraintStart_toStartOf="@id/defectqtn_txt"
                app:layout_constraintEnd_toEndOf="@id/defectqtn_txt"
                app:layout_constraintTop_toBottomOf="@id/defectqtn_txt"
                style="@style/styleoftext"
                />

            <ImageView
                android:id="@+id/plus_icon"
                android:layout_width="35dp"
                android:layout_height="25dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/plus"
                app:layout_constraintBottom_toBottomOf="@+id/defected_details_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/defected_details_txt" />


            <TextView
                android:id="@+id/defected_details_txt"
                style="@style/style_of_text_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif"
                android:text="@string/defects_details"
                app:layout_constraintStart_toStartOf="@id/child_txt"
                app:layout_constraintTop_toBottomOf="@id/sample_qty_edt" />
            <LinearLayout
                android:id="@+id/table_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/defected_details_txt">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/defected_qty"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="Defected Qty"
                        style="@style/style_of_text_bold"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/defects_qty"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="Defects Qty"
                        style="@style/style_of_text_bold"
                        app:layout_constraintBottom_toBottomOf="@id/defected_qty"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/defected_qty"
                        app:layout_constraintTop_toTopOf="@id/defected_qty" />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:layout_margin="5dp"/>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/defects_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/table_title" />


            <TextView
                android:id="@+id/basket_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Basket"
                style="@style/style_of_text_bold"
                app:layout_constraintStart_toStartOf="@id/child_txt"
                app:layout_constraintTop_toBottomOf="@id/defects_list"
                android:layout_marginTop="15dp"
                />

            <EditText
                android:id="@+id/basket_edt"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edt_bg"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/basket_txt"
                app:layout_constraintTop_toBottomOf="@id/basket_txt"/>

            <ImageView
                android:id="@+id/basket_img"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="3dp"
                android:src="@drawable/barcodel"
                app:layout_constraintBottom_toBottomOf="@+id/basket_edt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/basket_edt" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_btn"
                android:layout_width="170dp"
                android:layout_height="55dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/basket_edt"
                android:backgroundTint="@color/appbarcolor"
                android:textColor="@color/white"
                android:layout_marginTop="15dp"
                app:cornerRadius="25dp"
                android:text="@string/save"
                style="@style/styleoftextinbtn"

                />
<!--            <com.google.android.material.button.MaterialButton-->
<!--                android:id="@+id/add_defect_details_button"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@id/save_btn"-->
<!--                android:backgroundTint="@color/appbarcolor"-->
<!--                android:textColor="@color/white"-->
<!--                android:layout_marginTop="15dp"-->
<!--                app:cornerRadius="25dp"-->
<!--                android:text="@string/add_defects_details"-->
<!--                style="@style/styleoftextinbtn"/>-->


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>